--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,43 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.cursor {
+  width:22px;
+  height:22px;
+  border: 1px solid rgb(0, 217, 255);
+  border-radius: 50%;
+  position: absolute;
+  transition-duration: 250ms;
+  transition-timing-function: ease-out;
+  animation: animate1 .5s infinite alternate;
+  pointer-events: none;
 }
+.cursor::after{
+  content: "";
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  border: 8px solid rgb(103, 209, 228);
+  border-radius: 50%;
+  opacity: .5;
+  /* top:center; */
+  /* left:0; */
+  animation: animate2 .5s infinite alternate;
+}
+@keyframes animate1{
+from{
+transform:scale(1);
+}
+to{
+transform: scale(0.6);
+}
+}
+@keyframes animate2{
+  from{
+  transform:scale(1);
+  }
+  to{
+  transform: scale(0.4);
+  }
+  }
