--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -18,7 +18,7 @@ ul {
 
 ul li {
   list-style: none;
-  font-size: 1.2rem;
+
   padding: auto;
   display: flex;
   align-items: center;
@@ -31,18 +31,19 @@ ul li {
 }
 .contact-info ul li {
     font-size: 1.5rem;
-    padding:0.5rem;
-    text-align: center;
+    margin-bottom: 1.5rem;
+    margin-right: 1.5rem;
+
   }
 
-
-@media screen and (max-width: 250) {
-  .contact-info {
+/* 
+@media screen and (max-width: 250px) {
+  .contact-info ul li{
     flex-direction: column;
-  }
+    font-size: 12px;
+  } */
   
   .contact-section {
     margin-top: 30px;
   }
   
-}
