--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    margin: 0 10rem;
+    margin: 0 8rem;
   }
   
   .skills-section h1 {
@@ -31,20 +31,23 @@ margin-bottom: 1rem;
     line-height: 2.5rem;
   }
   
-  .skills-card {
-    background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-    color: #e6e6e6;
-    width: 10rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 1rem 0;
-    border-radius: 1rem;
-    margin: 1rem 0.7rem;
-  }
-  
   .skills-card img {
     height: 8rem;
     width: 8rem;
     margin-bottom: 1rem;
+    margin:auto;
   }
+
+.skills-card {
+  max-width: 1400px;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+    color: #e6e6e6;
+  display:grid;
+  grid-gap: 1rem;
+  padding: 1rem 0;
+  grid-template-columns: repeat(auto-fit, minmax(8rem, 1fr));
+  width: 10rem;
+  border-radius: 1rem;
+  text-align: center;
+    margin: 1rem 0.7rem;
+}
