--- a/src/index.css
+++ b/src/index.css
@@ -20,9 +20,9 @@
   position: absolute;
   border: 8px solid rgb(103, 209, 228);
   border-radius: 50%;
-  opacity: .5;
-  /* top:center; */
-  /* left:0; */
+  opacity: .5; 
+  top:center;
+  left:0;
   animation: animate2 .5s infinite alternate;
 }
 @keyframes animate1{
@@ -40,4 +40,10 @@ transform: scale(0.6);
   to{
   transform: scale(0.4);
   }
+  }
+
+  #root{
+    margin :0;
+    padding :0;
+    overflow-x: hidden;
   }
