--- a/src/index.css
+++ b/src/index.css
@@ -46,5 +46,5 @@ transform: scale(0.6);
     margin :0;
     padding :0;
     overflow-x: hidden;
-    background-color: #1a202c;
+    background-color: rgb(17 24 39);
   }
