--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -9,6 +9,12 @@
     line-height: 2rem;
     margin-bottom: 4rem;
 }
+.image-per {
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .wave {
     font-size: 3rem;
     animation-name: wave-animation; 
