--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  max-width: 800px;
 }
 
 .skills-section h1 {
@@ -27,8 +28,8 @@ h2 {
 }
 
 .skills-card img {
-  height: 40px;
-  width: 40px;
+  height: 60px;
+  width: 60px;
   margin-bottom: 1rem;
   margin: auto;
 }
