--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -4,6 +4,7 @@
   flex-wrap: wrap;
   max-width: 1024px;
   margin: auto;
+  perspective: 1000px; /* Add perspective to the container */
 }
 
 .skills-section h1 {
@@ -45,5 +46,9 @@ h2 {
   border-radius: 1rem;
   text-align: center;
   margin: 1.2rem 0.7rem;
-  border: 1px solid #8D98A6
+  border: 1px solid #8D98A6;
+  transition: transform 0.1s;
+  transform-style: preserve-3d; /* Preserve 3D transformations */
 }
+
+
