--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -46,11 +46,12 @@ h2 {
   text-align: center;
   margin: 1.2rem 0.7rem;
   border: 1px solid #8D98A6;
-  transition: transform 0.1s;
+  transition: transform 0.4s;
 }
 
 .skills-card:hover {
   background-color: #8D98A6;
+  color: #fff;
 }
 
 
