--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,10 @@
 .no-scrollbar::-webkit-scrollbar {
   display: none;
 }
+
+.gradient-to-black {
+  background: linear-gradient(180deg, #000000 0%, #101827 100%) !important;
+}
+.gradient-to-gray-900 {
+  background: linear-gradient(180deg, #101827 0%, #000000 100%) !important;
+}
