--- a/src/index.css
+++ b/src/index.css
@@ -32,10 +32,10 @@ html {
 }
 
 .gradient-to-black {
-  background: linear-gradient(180deg, #000000 0%, #101827 100%) !important;
+  background: linear-gradient(180deg, #000000 0%, ##0a0f1a 100%) !important;
 }
 
 .gradient-to-gray-900 {
-  background: linear-gradient(180deg, #101827 0%, #000000 100%) !important;
+  background: linear-gradient(180deg, ##0a0f1a 0%, #000000 100%) !important;
 }
 
